# final-project-mvp

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.codex/agents/: README.md
.github/: pull_request_template.md
.github/workflows/: quality.yml
backend/app/: __init__.py  gateway_main.py
backend/app/api/: __init__.py
backend/app/core/: __init__.py  gateway_settings.py  workflow_settings.py
docs/: PROJECT_SPEC.md  README_repro.md
docs/manifests/: manifest.json  manifest_dual.jsonl
docs/tasks/: ASSET_LIBRARY_AND_DUAL_STORYBOARD.md  CLONE_TO_RUN.md  CODEX_GATEWAY_V2.md  CODEX_GATEWAY_V2_LOG.md  PROJECT_LOG.md  STORYBOARD_WORKFLOW_INTEGRATION.md
docs/workflows/: README.txt  REF_人物場景合成與4K放大.md  wf02_insert.json  wf03_matte.json  wf_dual_B1.json  wf_dual_B2.json
frontend/gateway/: app.js  index.html  styles.css
runtime/: __init__.py  bootstrap.py  cli.py  comfy-core-requirements.txt  comfy-gguf-requirements.txt  comfy-overrides.txt  comfy-requirements.lock.txt  downloads.py  manager.py  models.lock.json  runtime-lock.json  spec.py
scripts/: fpmvp_runtime.py  lock_comfy_requirements.py  register_generated_asset.py  runtime.ps1  setup_dev.py
tests/: __init__.py  test_asset_library.py  test_codex_gateway_api.py  test_codex_gateway_client.py  test_dev_setup.py  test_runtime_contract_hardening.py  test_runtime_download_bootstrap_hardening.py  test_runtime_isolation_contract.py  test_runtime_setup.py  test_storyboard_workflows.py
tests/e2e/: __init__.py  test_codex_gateway_page.py
(+29 files in other folders)
