[project]
name = "final-project-mvp"
version = "0.1.0"
description = "Local storyboard visual studio with a typed character-style catalog."
readme = "README.md"
requires-python = "==3.12.10"
dependencies = [
    "fastapi>=0.116,<1",
    "httpx>=0.28,<1",
    "pillow>=11.3,<13",
    "pydantic>=2.11,<3",
    "pydantic-settings>=2.10,<3",
    "python-multipart>=0.0.20,<1",
    "starlette>=0.46,<2",
    "uvicorn>=0.35,<1",
]

[dependency-groups]
dev = [
    "mypy>=1.17,<2",
    "playwright>=1.54,<2",
    "pytest>=8.4,<10",
    "ruff>=0.12,<1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "browser: requires the lock-matched Playwright Chromium runtime",
]

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = [".python"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "SIM", "UP"]

[tool.mypy]
python_version = "3.12"
mypy_path = "backend"
check_untyped_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
